# RubberDuckCLI

./: README.md  RubberDuckProject.json  hello.py  pyproject.toml
.github/workflows/: artifact-upload.yml
src/rubberduckbuildcli/: example.py  main.py
src/rubberduckbuildcli/helpers/: git.py  uv.py
src/rubberduckbuildcli/projects/: __init__.py  cli.py  configurations.py  exceptions.py  github_workflows.py
